# vupai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
assets/brand/: README.md
docs/: supervision-board-plan.md
scripts/: check_voice.py  claude_summarize.py  ollama_summarize.py
src/voxpane/: __main__.py  asr.py  cli.py  commands.py  config.py  daemon.py  feedback.py  injector.py  journal.py  permissions.py  recorder.py  registry.py  router.py  tmuxio.py
src/vtmux/: __main__.py  asr.py  cli.py  config.py  daemon.py  feedback.py  hotkey.py  injector.py  recorder.py  registry.py  router.py  tmuxio.py
src/vupai/: __init__.py  __main__.py  activity.py  asr.py  audio.py  board.py  claude_summarize.py  cli.py  commands.py  config.py  confirm.py  daemon.py  feedback.py  filler.py  hosts.py  hotkey.py  injector.py  journal.py  panestate.py  permissions.py  platform_guard.py  recorder.py  registry.py  review.py  reviewtui.py  router.py  speech.py  summarize.py  tips.py  tmuxio.py  watcher.py
tests/: conftest.py  test_activity.py  test_asr.py  test_audio.py  test_board.py  test_claude_summarize.py  test_cli.py  test_commands.py  test_commands_integration.py  test_config.py  test_confirm.py  test_daemon.py  test_feedback.py  test_filler.py  test_hosts.py  test_hotkey.py  test_injector.py  test_journal.py  test_ollama_summarize.py  test_panestate.py  test_permissions.py  test_platform_guard.py  test_recorder.py  test_registry.py  test_registry_integration.py  test_review.py  test_reviewtui.py  test_router.py  test_speech.py  test_summarize.py  test_tips.py  test_tmuxio.py  test_watcher.py
